--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Chris Stamper's CV</title>
+    <!-- Title -->
+    <title>{% block title %}ZDP{% endblock %}</title>
+
+    <!-- Meta -->
+    {% block meta %}
     <meta name="description" content="Chris Stamper's CV. Software Engineer and Chemical Engineer based in Tulsa, Oklahoma.">
     <meta name="keywords" content="Chris Stamper, Software Engineer, Chemical Engineer, Tulsa, Oklahoma, CV, Resume">
     <meta name="author" content="Chris Stamper">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
+    {% endblock %}
+    
     <!-- Favicon -->
     <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="static/styles/cv.css">
+
+    {% block css %}{% endblock %}
 </head>
 <body>
+    {% block header %}
     <header class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
@@ -89,92 +98,96 @@
             </div>
         </section>        
     </header>
+    {% endblock %}
 
     <main class="container">
-        <section class="row">
-            <article class="col-md-6">
-                <div class="mt-4" id="education">
-                    <h2>Education</h2>
-                    <details open>
-                        <summary><h3>Holberton School, Tulsa, Oklahoma</h3></summary>
-                        <p>Computer Science & Machine Learning (4.0 GPA)</p>
-                    </details>
-                    <details open>
-                        <summary><h3>Oklahoma State University, Stillwater, Oklahoma</h3></summary>
-                        <p>Bachelors of Science in Chemical Engineering (3.1 GPA)</p>
-                        <p>21 Hours Petroleum Processes Courses (3.9 GPA)</p>
-                        <p>24 Hours Finance Courses (4.0 GPA)</p>
-                    </details>
+        {% block content %}
+            <section class="row">
+                <article class="col-md-6">
+                    <div class="mt-4" id="education">
+                        <h2>Education</h2>
+                        <details open>
+                            <summary><h3>Holberton School, Tulsa, Oklahoma</h3></summary>
+                            <p>Computer Science & Machine Learning (4.0 GPA)</p>
+                        </details>
+                        <details open>
+                            <summary><h3>Oklahoma State University, Stillwater, Oklahoma</h3></summary>
+                            <p>Bachelors of Science in Chemical Engineering (3.1 GPA)</p>
+                            <p>21 Hours Petroleum Processes Courses (3.9 GPA)</p>
+                            <p>24 Hours Finance Courses (4.0 GPA)</p>
+                        </details>
+                    </div>
+                </article>
+                <article class="col-md-6">
+                    <div class="mt-4" id="technologies">
+                        <h2>Technologies</h2>
+                        <ul>
+                            <li>Programming Languages: Python, C, JavaScript, Visual Basic</li>
+                            <li>Web Development: HTML/CSS, Flask, Node.js</li>
+                            <li>Database Management: SQL, MySQL, SQLAlchemy</li>
+                            <li>Version Control: Git BASH</li>
+                            <li>Microsoft Office Suite: Excel, PowerPoint</li>
+                        </ul>
+                    </div>
+                </article>
+            </section>
+    
+            <section class="mt-4" id="experience">
+                <h2>Experience</h2>
+                <article>
+                    <h3>Tutor at GKFF / Tulsa Community Foundation / Holberton Tulsa LLC</h3>
+                    <p>Duration: Dec 2022 - Present (6 months)</p>
+                    <p>Location: Tulsa, Oklahoma, United States (Hybrid)</p>
+                    <p>As a Tutor, I significantly contributed to the learning environment by elevating students' comprehension of complex coding concepts, boosting their problem-solving skills, and promoting academic excellence through individualized support. I maintained availability on Slack for student queries and assisted in the academic success of new students. I played a crucial role in tutor meetings and honed my leadership and problem-solving skills within my cohort.</p>
+                </article>
+            </section>
+    
+            <section class="mt-4" id="projects">
+                <h2>Projects</h2>
+                <div class="row">
+                    <article class="col-md-6 col-lg-4">
+                        <div class="card project-card mb-4" id="strain">
+                            <div class="card-body">
+                                <h3><a href="https://github.com/ZeroDayPoke/STRAIN.gg_Clouds">STRAIN.gg Clouds</a></h3>
+                                <p>STRAIN.gg Clouds is a web application for exploring, filtering, and sorting strains of cannabis based on parameters like concentration, terpene profiles, effects, and more. Users can also create accounts and save their favorite strains.</p>
+                                <ul>
+                                    <li><b>Technologies used:</b> JavaScript, HTML/CSS, Node.js, Flask, MySQL</li>
+                                    <li><b>Role:</b> CLOUD_CHASER - added via the mysql interpreter</li>
+                                    <li><b>Live Project:</b> <a href="https://strain.gg">strain.gg</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="col-md-6 col-lg-4">
+                        <div class="card project-card mb-4" id="hbnb">
+                            <div class="card-body">
+                                <h3><a href="https://github.com/ZeroDayPoke/holbertonschool-AirBnB_clone_v4">HBNB Clone</a></h3>
+                                <p>HBNB Clone is a clone of the Airbnb website. This full-stack web development project involves front-end and back-end design.</p>
+                                <ul>
+                                    <li><b>Technologies used:</b> Flask, Python, HTML/CSS, and Javascript</li>
+                                    <li><b>Role:</b> Full-stack web developer</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </article>
+                    <article class="col-md-6 col-lg-4">
+                        <div class="card project-card mb-4" id="shell">
+                            <div class="card-body">
+                                <h3><a href="https://github.com/Julia-5534/holbertonschool-simple_shell">Simple Shell</a></h3>
+                                <p>Simple Shell is a project where we created a simple UNIX command interpreter for a low-level programming project. The project replicates functionality of the simple shell (sh).</p>
+                                <ul>
+                                    <li><b>Technologies used:</b> C</li>
+                                    <li><b>Role:</b> Shell developer</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </article>
                 </div>
-            </article>
-            <article class="col-md-6">
-                <div class="mt-4" id="technologies">
-                    <h2>Technologies</h2>
-                    <ul>
-                        <li>Programming Languages: Python, C, JavaScript, Visual Basic</li>
-                        <li>Web Development: HTML/CSS, Flask, Node.js</li>
-                        <li>Database Management: SQL, MySQL, SQLAlchemy</li>
-                        <li>Version Control: Git BASH</li>
-                        <li>Microsoft Office Suite: Excel, PowerPoint</li>
-                    </ul>
-                </div>
-            </article>
-        </section>
-
-        <section class="mt-4" id="experience">
-            <h2>Experience</h2>
-            <article>
-                <h3>Tutor at GKFF / Tulsa Community Foundation / Holberton Tulsa LLC</h3>
-                <p>Duration: Dec 2022 - Present (6 months)</p>
-                <p>Location: Tulsa, Oklahoma, United States (Hybrid)</p>
-                <p>As a Tutor, I significantly contributed to the learning environment by elevating students' comprehension of complex coding concepts, boosting their problem-solving skills, and promoting academic excellence through individualized support. I maintained availability on Slack for student queries and assisted in the academic success of new students. I played a crucial role in tutor meetings and honed my leadership and problem-solving skills within my cohort.</p>
-            </article>
-        </section>
-
-        <section class="mt-4" id="projects">
-            <h2>Projects</h2>
-            <div class="row">
-                <article class="col-md-6 col-lg-4">
-                    <div class="card project-card mb-4" id="strain">
-                        <div class="card-body">
-                            <h3><a href="https://github.com/ZeroDayPoke/STRAIN.gg_Clouds">STRAIN.gg Clouds</a></h3>
-                            <p>STRAIN.gg Clouds is a web application for exploring, filtering, and sorting strains of cannabis based on parameters like concentration, terpene profiles, effects, and more. Users can also create accounts and save their favorite strains.</p>
-                            <ul>
-                                <li><b>Technologies used:</b> JavaScript, HTML/CSS, Node.js, Flask, MySQL</li>
-                                <li><b>Role:</b> CLOUD_CHASER - added via the mysql interpreter</li>
-                                <li><b>Live Project:</b> <a href="https://strain.gg">strain.gg</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </article>
-                <article class="col-md-6 col-lg-4">
-                    <div class="card project-card mb-4" id="hbnb">
-                        <div class="card-body">
-                            <h3><a href="https://github.com/ZeroDayPoke/holbertonschool-AirBnB_clone_v4">HBNB Clone</a></h3>
-                            <p>HBNB Clone is a clone of the Airbnb website. This full-stack web development project involves front-end and back-end design.</p>
-                            <ul>
-                                <li><b>Technologies used:</b> Flask, Python, HTML/CSS, and Javascript</li>
-                                <li><b>Role:</b> Full-stack web developer</li>
-                            </ul>
-                        </div>
-                    </div>
-                </article>
-                <article class="col-md-6 col-lg-4">
-                    <div class="card project-card mb-4" id="shell">
-                        <div class="card-body">
-                            <h3><a href="https://github.com/Julia-5534/holbertonschool-simple_shell">Simple Shell</a></h3>
-                            <p>Simple Shell is a project where we created a simple UNIX command interpreter for a low-level programming project. The project replicates functionality of the simple shell (sh).</p>
-                            <ul>
-                                <li><b>Technologies used:</b> C</li>
-                                <li><b>Role:</b> Shell developer</li>
-                            </ul>
-                        </div>
-                    </div>
-                </article>
-            </div>
-        </section>
+            </section>
+        {% endblock %}
     </main>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
+    {% block footer %}
     <footer class="bg-dark mt-3 py-2">
         <div class="container">
             <div class="row">
@@ -207,5 +220,9 @@
             </div>
         </div>
     </footer>
+    {% endblock %}
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    {% block js %}{% endblock %}
 </body>
 </html>
