--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -90,8 +90,8 @@
                 <div class="text-md-end">
                     <div class="mb-4">
                         <h3>Interact</h3>
-                        <a href="resume_draft_v2.pdf" download="Source_Code" class="btn btn-primary ml-2">Download Source Code</a>
-                        <a href="static/lib/chris_stamper_cv.pdf" download="Chris_Stamper_CV" class="btn btn-primary">Download CV</a>
+                        <a href="https://zerodaypoke.com/app/static/resume_draft_v2.pdf" download="Source_Code" class="btn btn-primary ml-2">Download Source Code</a>
+                        <a href="https://zerodaypoke.com/app/static/Chris_Stamper_CV.pdf" download="Chris_Stamper_CV" class="btn btn-primary">Download CV</a>
                         <a href="mailto:cstampok@gmail.com?subject=Job Opportunity" class="btn btn-primary ml-2">Hire Me</a>
                     </div>
                 </div>
