--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,11 +14,11 @@
     {% endblock %}
     
     <!-- Favicon -->
-    <link rel="icon" href="static/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}" type="image/x-icon">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="static/styles/cv.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/cv.css') }}">
 
     {% block css %}{% endblock %}
 </head>
@@ -28,7 +28,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="static/images/favicon.ico" alt="Chris Stamper - CV" width="auto" height="30">
+                    <img src="{{ url_for('static', filename='images/favicon.ico') }}" alt="Chris Stamper - CV" width="auto" height="30">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -91,7 +91,7 @@
                     <div class="mb-4">
                         <h3>Interact</h3>
                         <a href="https://zerodaypoke.com/static/resume_draft_v2.pdf" download="Source_Code" class="btn btn-primary ml-2">Download Source Code</a>
-                        <a href="https://zerodaypoke.com/static/Chris_Stamper_CV.pdf" download="Chris_Stamper_CV" class="btn btn-primary">Download CV</a>
+                        <a href="https://zerodaypoke.com/static/chris_stamper_cv.pdf" download="Chris_Stamper_CV" class="btn btn-primary">Download CV</a>
                         <a href="mailto:cstampok@gmail.com?subject=Job Opportunity" class="btn btn-primary ml-2">Hire Me</a>
                     </div>
                 </div>
