--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -34,7 +34,15 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('main_routes.index') }}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('main_routes.projects') }}">Search</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ml-auto">
                         {% if current_user.is_authenticated %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('main_routes.signout') }}">Sign Out</a>
@@ -61,7 +69,7 @@
                             </ul>
                         </li>
                     </ul>
-                </div>
+                </div>            
             </div>
         </nav>
         <section class="row align-items-center">
