--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,6 +23,8 @@
     {% block css %}{% endblock %}
 </head>
 <body>
+    {% block nav %}
+    {% endblock %}
     {% block header %}
     <header class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -45,17 +47,17 @@
                     <ul class="navbar-nav ml-auto">
                         {% if current_user.is_authenticated %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('main_routes.signout') }}">Sign Out</a>
+                                <a class="nav-link" href="{{ url_for('auth_routes.signout') }}">Sign Out</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('main_routes.interface') }}">Interface</a>
+                                <a class="nav-link" href="{{ url_for('admin_routes.interface') }}">Interface</a>
                             </li>
                         {% else %}
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('main_routes.signup') }}">Sign Up</a>
+                                <a class="nav-link" href="{{ url_for('auth_routes.signup') }}">Sign Up</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ url_for('main_routes.signin') }}">Sign In</a>
+                                <a class="nav-link" href="{{ url_for('auth_routes.signin') }}">Sign In</a>
                             </li>
                         {% endif %}
                         <li class="nav-item dropdown">
@@ -69,7 +71,7 @@
                             </ul>
                         </li>
                     </ul>
-                </div>            
+                </div>
             </div>
         </nav>
         <section class="row align-items-center">
