--- a/app/templates/signin.html
+++ b/app/templates/signin.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <h2>Sign In</h2>
-<form method="POST" action="{{ url_for('main_routes.signin') }}">
+<form method="POST" action="{{ url_for('auth_routes.signin') }}">
     {{ form.csrf_token }}
     {{ form.email.label }} {{ form.email }}
     {{ form.password.label }} {{ form.password }}
