--- a/app/templates/interface.html
+++ b/app/templates/interface.html
@@ -3,57 +3,9 @@
 
 {% block title %}Interface{% endblock %}
 {% block main %}{% endblock %}
-{% block header %}{% endblock %}
-{% block nav %}
-<header class="container">
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-            <img src="{{ url_for('static', filename='images/favicon.ico') }}" alt="Chris Stamper - CV" width="auto" height="30">
-        </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('main_routes.index') }}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ url_for('main_routes.projects') }}">Search</a>
-                </li>
-            </ul>
-            <ul class="navbar-nav ml-auto">
-                {% if current_user.is_authenticated %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth_routes.signout') }}">Sign Out</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin_routes.interface') }}">Interface</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth_routes.signup') }}">Sign Up</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('auth_routes.signin') }}">Sign In</a>
-                    </li>
-                {% endif %}
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Projects
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#strain">STRAIN.gg Clouds</a></li>
-                        <li><a class="dropdown-item" href="#hbnb">HBNB Clone</a></li>
-                        <li><a class="dropdown-item" href="#shell">Simple Shell</a></li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
-</header>
+
+{% block header %}
+
 {% endblock %}
 
 {% block content %}
@@ -74,6 +26,14 @@
                 <p>{{ form.role.label }} {{ form.role() }}</p>
                 {% if form.role.errors %}
                     <p class="error">{{ form.role.errors[0] }}</p>
+                {% endif %}
+                <p>{{ form.repo_link.label }} {{ form.repo_link() }}</p>
+                {% if form.repo_link.errors %}
+                    <p class="error">{{ form.repo_link.errors[0] }}</p>
+                {% endif %}
+                <p>{{ form.live_link.label }} {{ form.live_link() }}</p>
+                {% if form.live_link.errors %}
+                    <p class="error">{{ form.live_link.errors[0] }}</p>
                 {% endif %}
                 <p>{{ form.related_skills.label }}</p>
                 {% for skill in form.related_skills %}
@@ -129,7 +89,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-8 offset-lg-2">
+        <div class="col-lg-6">
             <h2>Update Project</h2>
             <form action="{{ url_for('project_routes.update_project') }}" method="POST">
                 {{ update_project_form.hidden_tag() }}
@@ -148,6 +108,14 @@
                 <p>{{ update_project_form.role.label }} {{ update_project_form.role() }}</p>
                 {% if update_project_form.role.errors %}
                     <p class="error">{{ update_project_form.role.errors[0] }}</p>
+                {% endif %}
+                <p>{{ update_project_form.repo_link.label }} {{ update_project_form.repo_link() }}</p>
+                {% if update_project_form.repo_link.errors %}
+                    <p class="error">{{ update_project_form.repo_link.errors[0] }}</p>
+                {% endif %}
+                <p>{{ update_project_form.live_link.label }} {{ update_project_form.live_link() }}</p>
+                {% if update_project_form.live_link.errors %}
+                    <p class="error">{{ update_project_form.live_link.errors[0] }}</p>
                 {% endif %}
                 <p>{{ update_project_form.related_skills.label }}</p>
                 {% for skill in update_project_form.related_skills %}
