--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -50,6 +50,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('admin_routes.interface') }}">Interface</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ url_for('auth_routes.account') }}">Account</a>
+                            </li>
                         {% else %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ url_for('auth_routes.signup') }}">Sign Up</a>
@@ -77,7 +80,7 @@
         <section class="row align-items-center">
             <div class="col-12">
                 <h1>Chris Stamper</h1>
-                <h2>Software Engineer, Chemical Engineer</h2>
+                <h2>Data Engineer, Software Engineer, Chemical Engineer</h2>
                 <p class="fs-5">Location: Tulsa, Oklahoma, United States</p>
             </div>
         </section>
