--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
 
     {% block css %}{% endblock %}
   </head>
-  <body class="bg-dark">
+  <body class="bg-dark text-light">
     <header class="container">
       {% include 'default/navbar.html' %}
       {% if include_header %}
