--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -93,7 +93,7 @@
         <h2>Projects</h2>
         <div class="row">
           <article class="col-md-6 col-lg-4">
-            <div class="card project-card mb-4" id="strain">
+            <div class="card project-card mb-4 bg-dark text-light" id="strain">
               <div class="card-body">
                 <h3>
                   <a href="https://github.com/ZeroDayPoke/STRAIN.gg_Clouds"
@@ -123,7 +123,7 @@
             </div>
           </article>
           <article class="col-md-6 col-lg-4">
-            <div class="card project-card mb-4" id="hbnb">
+            <div class="card project-card mb-4 bg-dark text-light" id="hbnb">
               <div class="card-body">
                 <h3>
                   <a
@@ -147,7 +147,7 @@
             </div>
           </article>
           <article class="col-md-6 col-lg-4">
-            <div class="card project-card mb-4" id="shell">
+            <div class="card project-card mb-4 bg-dark text-light" id="shell">
               <div class="card-body">
                 <h3>
                   <a
