--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
     <!-- Favicon -->
     <link
       rel="icon"
-      href="{{ url_for('static', filename='images/favicon.ico' v=1.0) }}"
+      href="{{ url_for('static', filename='images/favicon.ico', v=1.0) }}"
       type="image/x-icon"
     />
     <!-- Bootstrap CSS -->
