--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
     <!-- Custom CSS -->
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='styles/cv.css') }}"
+      href="{{ url_for('static', filename='styles/cv.css', v='1.0') }}"
     />
 
     {% block css %}{% endblock %}
