--- a/app/static/styles/cv.css
+++ b/app/static/styles/cv.css
@@ -1,4 +1,4 @@
-.card .blog-card {
+.card .blog-card .card-body {
   /* This overrides the bootstrap built in light mode */
   background-color: #343a40; /* This is the color for bg-dark in Bootstrap */
   color: #f8f9fa; /* This is the color for text-light in Bootstrap */
