--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -6,7 +6,7 @@
 <section class="row">
   {% for project in projects %}
   <div class="col-md-6 col-lg-4">
-    <div class="card project-card mb-4" id="{{ project.id }}">
+    <div class="card project-card mb-4 bg-dark text-light" id="{{ project.id }}">
       <div class="card-body">
         <h3 class="card-title">
           {% if project.repo_link %}
