--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -26,7 +26,7 @@
 
     {% block css %}{% endblock %}
   </head>
-  <body class="bg-dark text-light">
+  <body>
     <header class="container">
       {% include 'default/navbar.html' %} {% if include_header %} {% include
       'default/header.html' %} {% endif %}
