--- a/app/templates/default/footer.html
+++ b/app/templates/default/footer.html
@@ -1,4 +1,4 @@
-<footer class="mt-3 py-2">
+<footer class="mt-3 py-2 bg-dark text-light">
   <div class="container">
     <div class="row">
       <section class="col-md-4">
