--- a/app/templates/default/navbar.html
+++ b/app/templates/default/navbar.html
@@ -1,96 +1,92 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-      <img
-        src="{{ url_for('static', filename='images/favicon.ico') }}"
-        alt="Chris Stamper - CV"
-        width="auto"
-        height="30"
-      />
-    </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNav"
-      aria-controls="navbarNav"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('main_routes.index') }}">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('main_routes.projects') }}"
-            >Search</a
-          >
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            id="navbarDropdown"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            Blogs
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li>
-              <a class="dropdown-item" href="{{ url_for('main_routes.blogs') }}"
-                >All</a
-              >
-            </li>
-            {% for blog in blogs %}
-            <li>
-              <a
-                class="dropdown-item"
-                href="{{ url_for('blog_routes.blog_detail', blog_id=blog.id) }}"
-                >{{ blog.name }}</a
-              >
-            </li>
-            {% endfor %}
-          </ul>
-        </li>
-      </ul>
-      <ul class="navbar-nav ml-auto">
-        {% if current_user.is_authenticated %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('auth_routes.signout') }}"
-            >Sign Out</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('admin_routes.interface') }}"
-            >Interface</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('auth_routes.account') }}"
-            >Account</a
-          >
-        </li>
-        {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('auth_routes.signup') }}"
-            >Sign Up</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('auth_routes.signin') }}"
-            >Sign In</a
-          >
-        </li>
-        {% endif %}
-        {% if include_header %}
-          {% include 'default/quicknav.html' %}
-        {% endif %}
-      </ul>
-    </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <a class="navbar-brand" href="#">
+    <img
+      src="{{ url_for('static', filename='images/favicon.ico') }}"
+      alt="Chris Stamper - CV"
+      width="auto"
+      height="30"
+    />
+  </a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse"
+    data-bs-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('main_routes.index') }}">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('main_routes.projects') }}"
+          >Search</a
+        >
+      </li>
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdown"
+          role="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          Blogs
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li>
+            <a class="dropdown-item" href="{{ url_for('main_routes.blogs') }}"
+              >All</a
+            >
+          </li>
+          {% for blog in blogs %}
+          <li>
+            <a
+              class="dropdown-item"
+              href="{{ url_for('blog_routes.blog_detail', blog_id=blog.id) }}"
+              >{{ blog.name }}</a
+            >
+          </li>
+          {% endfor %}
+        </ul>
+      </li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      {% if current_user.is_authenticated %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth_routes.signout') }}"
+          >Sign Out</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('admin_routes.interface') }}"
+          >Interface</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth_routes.account') }}"
+          >Account</a
+        >
+      </li>
+      {% else %}
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth_routes.signup') }}"
+          >Sign Up</a
+        >
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="{{ url_for('auth_routes.signin') }}"
+          >Sign In</a
+        >
+      </li>
+      {% endif %} {% if include_header %} {% include 'default/quicknav.html' %}
+      {% endif %}
+    </ul>
   </div>
 </nav>
