include mathjax cdn for ML blogs

--- a/app/templates/blog_detail.html
+++ b/app/templates/blog_detail.html
@@ -1,8 +1,12 @@
 <!-- app/templates/blog/detail.html -->
-{% extends "base.html" %}
-
-{% block content %}
-<style>
-
-</style>
-{% include 'blog/' + blog.content_file + '.html' %} {% endblock %}
+{% extends "base.html" %} {% block content %}
+<style></style>
+{% include 'blog/' + blog.content_file + '.html' %} {% endblock %} {% block js
+%}
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script
+  id="MathJax-script"
+  async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"
+></script>
+{% endblock %}
