update console and footer

--- a/app/templates/default/footer.html
+++ b/app/templates/default/footer.html
@@ -24,8 +24,8 @@
           </li>
           <li>
             <span class="info-label">Website:</span>
-            <a href="https://zerodaypoke.com/pr/cv/v2.html"
-              >zerodaypoke.com/pr/cv/v2.html</a
+            <a href="https://zerodaypoke.com"
+              >zerodaypoke.com</a
             >
           </li>
           <li>
