--- a/app/templates/default/header.html
+++ b/app/templates/default/header.html
@@ -12,18 +12,12 @@
       <address>
         <ul class="list-unstyled">
           <li>
-            <span class="info-label">Phone:</span>
-            <a href="tel:9189144816">(918) 914-4816</a>
-          </li>
-          <li>
             <span class="info-label">Email:</span>
             <a href="mailto:cstampok@gmail.com">cstampok@gmail.com</a>
           </li>
           <li>
             <span class="info-label">Website:</span>
-            <a href="https://zerodaypoke.com"
-              >zerodaypoke.com</a
-            >
+            <a href="https://zerodaypoke.com">zerodaypoke.com</a>
           </li>
           <li>
             <span class="info-label">GitHub:</span>
