--- a/app/templates/default/navbar.html
+++ b/app/templates/default/navbar.html
@@ -56,6 +56,34 @@
           {% endfor %}
         </ul>
       </li>
+      <li class="nav-item dropdown">
+        <a
+          class="nav-link dropdown-toggle"
+          href="#"
+          id="navbarDropdown"
+          role="button"
+          data-bs-toggle="dropdown"
+          aria-expanded="false"
+        >
+          Tutorials
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li>
+            <a class="dropdown-item" href="{{ url_for('tutorial_routes.tutorials') }}"
+              >All</a
+            >
+          </li>
+          {% for tutorial in tutorials %}
+          <li>
+            <a
+              class="dropdown-item"
+              href="{{ url_for('tutorial_routes.tutorial_detail', tutorial_id=tutorial.id) }}"
+              >{{ tutorial.name }}</a
+            >
+          </li>
+          {% endfor %}
+        </ul>
+      </li>
     </ul>
     <ul class="navbar-nav ml-auto">
       {% if current_user.is_authenticated %}
